# RegMonitor

./: .gitignore  CodeImprovement.md  README.md  app.py  config.json  go.mod  go.sum  main.go  package.json  requirements.txt  sample.reg  test_validation.py
.orchids/: orchids.json
backend/: Cargo.toml
backend/src/: config.rs  event.rs  main.rs  monitor.rs
