[package]
name = "regmonitor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeromq = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dependencies.windows]
version = "0.61"
features = [
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
